Opt out of anonymous style propagation for spanner placeholders.

LayoutObject::PropagateStyleToAnonymousChildren() doesn't do the right
thing for LayoutMultiColumnSpannerPlaceholder. Spanner placeholders need
to copy the margins from the actual spanner object, in addition to
inheriting properties from the parent of the actual spanner.

Bug: 903699
Change-Id: I4252c546610eca2698efd523f98f20a98627d217
Reviewed-on: https://chromium-review.googlesource.com/c/1328986
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607179}
Former-commit-id: c95b6ff66bfb1807917bcc1aab4a36c84051901a